<resources xmlns:tools="http://schemas.android.com/tools">
<string name="app_name">Kalkulator BMI</string>

<string name="tytulBmi">Kalkulator BMI</string>
<string name="tytulCalories">Dzienne zapotrzebowanie kaloryczne</string>
<string name="tytulFood">Co jeść w czasach koronawirusa?</string>
<string name="tytulQuiz">Quiz</string>
<string name="tytulStatistics">Statystyki zachorowań</string>

<string name="potrawa1">Pancakes z nutellą!!!</string>
<string name="przepis1">Do miski wsyp mąkę, proszek do pieczenia, a także dodaj jajko, mleko, cukier puder i olej. Zmiksuj wszystkie składniki przez
    około 20 sekund i odstaw masę na 5 minut. Na papier do pieczenia nałóż po łyżeczce nutelli lub kremu czekoladowego i lekko rozsmaruj w kształt
    małych kółek. Wstaw do zamrażalnika na minimum 30 minut. Wyciągnij je dopiero w momencie smażenia placuszków. Na rozgrzaną patelnię wlej odrobinę oleju.
    Nałóż łyżkę ciasta, lekko rozsmaruj w kształt koła troszkę większego od krążków z nutelli. Smaż na małym ogniu i gdy placuszek będzie już prawie gotowy
    do obrócenia, wtedy nałóż krążek nutelli prosto z zamrażalnika na środek placuszka, nałóż od razu drugą łyżkę ciasta przykrywając czekoladę. Po minutce
    smażenia obróć go na drugą stronę i smaż na rumiany kolor.
</string>
<string-array name="produktyList1">
    <item>- 1 jajko</item>
    <item>- 2 szklanki mąki pszennej</item>
    <item>- 1,5 szklanki mleka</item>
    <item>- 0,25 szklanki oleju</item>
    <item>- 3 łyżki cukru pudru</item>
    <item>- 1 łyżka proszku do pieczenia</item>
    <item>- 6 łyżeczek nutelli</item>
</string-array>

<string name="potrawa2">Gofry!!!</string>
<string name="przepis2">Oddziel białka od żółtek. Białka umieść w osobnej misce. Żółtka zaś umieść w drugim naczyniu. Do żółtek wlej lekko ciepłe
    mleko oraz dodaj 1/3 szklankę oleju roślinnego. Na koniec wsyp mąkę wymieszaną z proszkiem do pieczenia. Całość wymieszaj dokładnie przy pomocy
    miksera na gładkie ciasto. Do miski z białkami dodaj szczyptę soli. Białka ubij na sztywno. Zacznij od niskich obrotów miksera i stopniowo
    zwiększaj je do maksymalnych. Po minucie ubijania dodaj łyżeczkę cukru. Do miski z ciastem dodawaj stopniowo po łyżce ubitej piany.
    Delikatnie mieszaj całość po każdej dodanej łyżce. W taki sposób wmieszaj całą pianę z białek i cukru. Płytki gofrownicy wysmaruj olejem.
    Piecz każdego gofra około 4 minut.
</string>
<string-array name="produktyList2">
    <item>- 2 niepełne szklanki mąki pszennej - 300 g</item>
    <item>- 1,5 szklanki mleka</item>
    <item>- 3 średnie jajka</item>
    <item>- łyżeczka proszku do pieczenia</item>
    <item>- łyżeczka cukru</item>
    <item>- szczypta soli</item>
</string-array>

<string name="potrawa3">Ciasto marchewkowe!!!</string>
<string name="przepis3">Wymieszaj wszystkie składniki, pomijając masło i syrop klonowy (lub ich zamienniki). Rozpuść masło w garnku i dodaj miód,
    następnie połącz wszystkie składniki i dokładnie wymieszaj. Całość możesz już przełożyć do foremki. Ciasto piecz przez około 40 minut
    w temperaturze 180 stopni Celsjusza.
</string>
<string-array name="produktyList3">
    <item>- 3 duże marchewki starte na średnich oczkach</item>
    <item>- 1 szklanka orzechów włoskich</item>
    <item>- 1 szklanka mąki orkiszowej</item>
    <item>- 2 jajka</item>
    <item>- pół szklanki rodzynek</item>
    <item>- pół szklanki daktyli</item>
    <item>- 2 łyżki syropu klonowego lub miodu</item>
    <item>- 2 łyżki proszku do pieczenia</item>
    <item>- 3 łyżki masła lub oleju kokosowego</item>
    <item>- pół szklanki wiórek kokosowych</item>
</string-array>

<string name="waga">Waga</string>
<string name="wzrost">Wzrost</string>
<string name="wiek">Wiek</string>
<string name="plec">Płeć</string>
<string name="plecK">Kobieta</string>
<string-array name="plecList">
    <item>Kobieta</item>
    <item>Mężczyzna</item>
</string-array>

<string name="obliczBmi">Oblicz BMI</string>
<string name="obliczCalories">Oblicz PPM</string>
<string name="co_zjesc">Co zjeść?</string>
<string name="wynik">Wynik:</string>
<string name="hintWaga">Twoja waga</string>
<string name="hintWzrost">Twój wzrost</string>
<string name="hintWiek">Twój wiek</string>
<string name="hintBmi">Twoje BMI</string>
<string name="uwaga">Podaj swoje BMI</string>
<string name="pytanie">Pytanie:</string>
<string name="punkty">0</string>
<string name="licznik">1 z 9</string>
<string name="koniec">Jeszcze raz!!!</string>
<string name="zero">0</string>
<string name="podaj_waga_wzrost">Podaj swoją wagę i wzrost</string>
<string name="podaj_waga_wzrost_wiek">Podaj swoją wagę, wzrost i wiek</string>

<string name="fragStart">Witaj w mojej apce!!!</string>

<string name="navStart">Start</string>
<string name="navBmi">BMI</string>
<string name="navKalorie">Kalorie</string>
<string name="navPrzepis">Przepis</string>
<string name="navQuiz">Quiz</string>
<string name="navStatystyki">Statystyki zachorowań</string>

<string name="pyt1">Jakim kodem oznaczany jest koronawirus?</string>
<string name="pyt2">Jak nazywa się choroba, wywoływana przez koronawirusa?</string>
<string name="pyt3">Jakie objawy może mieć zakażona koronawirusem osoba?</string>
<string name="pyt4">Skąd nazwa "koronawirus"?</string>
<string name="pyt5">Gdzie odnotowano pierwsze przypadki zachorowań?</string>
<string name="pyt6">Ciężka postać COVID-19 to...</string>
<string name="pyt7">Jak przenoszony jest koronawirus?</string>
<string name="pyt8">Czy jest już szczepionka na koronawirusa?</string>
<string name="pyt9">Czy koronawirus jest groźny również dla zwierząt?</string>

<string name="odp1A">COVID-19</string>
<string name="odp1B">AH1N1</string>
<string name="odp1C">SARS-CoV-2 (2019-nCoV)</string>
<string name="odp1D">EBOV</string>

<string name="odp2A">ŚWIŃSKA GRYPA</string>
<string name="odp2B">SARS</string>
<string name="odp2C">EBOLA</string>
<string name="odp2D">COVID-19</string>

<string name="odp3A">GORĄCZKA, KASZEL, DUSZNOŚCI, BÓL MIĘŚNI, ZMĘCZENIE</string>
<string name="odp3B">KATAR, KASZEL, GORĄCZKA</string>
<string name="odp3C">BÓLE GŁOWY, ZMĘCZENIE, BIEGUNKA</string>
<string name="odp3D">CHOROBA PRZEBIEGA WYŁĄCZNIE BEZOBJAWOWO</string>

<string name="odp4A">OD CHOROBY, KTÓRĄ WYWOŁUJE</string>
<string name="odp4B">JEST TO KORONNY WIRUS TEJ ERY</string>
<string name="odp4C">OD JEGO OTOCZKI BIAŁKOWEJ Z WYPUSTKAMI</string>
<string name="odp4D">OD UCISKOWEGO BÓLU GŁOWY, KTÓRY JEST JEJ OBJAWEM</string>

<string name="odp5A">PEKIN</string>
<string name="odp5B">WUHAN</string>
<string name="odp5C">BERGAMO</string>
<string name="odp5D">WENECJA</string>

<string name="odp6A">ŚPIĄCZKA KRWOTOCZNA</string>
<string name="odp6B">GRYPA</string>
<string name="odp6C">ZAPALENIE PŁUC I NIEWYDOLNOŚĆ ODDECHOWA</string>
<string name="odp6D">PORAŻENIE MÓZGOWE</string>

<string name="odp7A">DROGĄ KROPELKOWĄ</string>
<string name="odp7B">DROGĄ FEKALNO-ORALNĄ</string>
<string name="odp7C">DROGĄ PŁCIOWĄ</string>
<string name="odp7D">DROGĄ POKARMOWĄ</string>

<string name="odp8A">NIE I JEJ NIE BĘDZIE</string>
<string name="odp8B">TAK, ALE BĘDZIE DOPIERO TESTOWANA</string>
<string name="odp8C">NIE, JESZCZE JEJ NIE WYNALEZIONO</string>
<string name="odp8D">TAK I JEST JUŻ PODAWANA</string>

<string name="odp9A">TAK, CHORUJĄ ZWIERZĘTA DOMOWE</string>
<string name="odp9B">OBECNIE U KILKUDZIESIĘCIU ZWIERZĄT TRWAJĄ TESTY</string>
<string name="odp9C">KORONAWIRUS NIE JEST GROŹNY DLA NIKOGO</string>
<string name="odp9D">NIE, CHORUJĄ TYLKO LUDZIE</string>

</resources>
